Worked more on how goals are handled and getting them to function properly.